# minimact

./: .gitignore  CACHE_HIT_DETECTION_PROBLEM.md  EXTERNAL_LIBRARIES_SOLUTIONS.md  FEATURES_COMPLETE.md  IMPLEMENTATION_ROADMAP.md  LOOP_TEMPLATE_INTEGRATION_SUMMARY.md  MOCK_CLIENT_TESTING.md  PHASE_1_2_3_STATUS.md  PHASE_2_COMPLETE.md  PHASE_4_COMPLETE.md  PHASE_5_PLAN.md  README.md  README2.md  STATUS.md  TESTING_COMPLETE_FINAL.md  TEST_FIXES_TODO.md  TEST_TEMPLATE.md  TODO.md  USEDOMELEMENTSTATE_DIFFICULTY_RANKING.md  USEDOMELEMENTSTATE_IMPLEMENTATION_PLAN.md  checkpkg.csproj  faq.html  faq.txt  hooks-lib-mockup.html  pack-minimact-aspnetcore.bat  package-lock.json  package.json  playwright.config.ts  presentation.md  sync-packages.config.js  test.html  vitest.config.ts  vitest.setup.ts
cactus-browser/src-tauri/: Cargo.toml  tauri.conf.json
src/: .gitignore  Cargo.toml  HYBRID-JSX-STRATEGY.md  NEXT-STEPS.md  PREDICTOR-TDD-PLAN.md  QUICKSTART.md  README.md  REQUIREMENTS.md  STATUS.md  TDD-SUMMARY.md  TEST-FAILURES.md  VISION.md  convo.txt  convo10.txt  convo11.txt  convo12.txt  convo13.txt  convo2.txt  convo3.txt  convo4.txt  convo5.txt  convo6.txt  convo7.txt  convo8.txt  convo9.txt  minimact.sln  output.txt  package.json  temp_output.txt  test-cli.js  test-client-sim.js  test-complexstate-output.cs  test-detection.js  test-dropdown-validation.js  test-e2e.js  test-fixtures.json  test-jsx-empty.jsx  test-markdown-validation.js  test-modal-validation.js  test-path-inflation.cs  (+8 more)
src/Minimact.AspNetCore.Test/: Minimact.AspNetCore.Test.csproj  PatchPathAdjusterIntegrationTests.cs  (+3 more)
(+1902 files in other folders)
