[package]
name = "minimact"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "minimact"
crate-type = ["cdylib", "rlib"]  # cdylib for C# FFI, rlib for Rust tests

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
lazy_static = "1.4"
dashmap = "6.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "reconciliation"
harness = false
