[package]
name = "cactus-browser"
version = "0.1.0"
description = "The TSX-Native, Posthydrationist Web Browser"
authors = ["Minimact Team"]
license = "MIT"
repository = "https://github.com/minimact/cactus-browser"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-fs = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4"] }
lazy_static = "1.4"
minimact = { path = "../../src" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
