[package]
name = "minimact-rust-runtime"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6"
rayon = "1.7"
crossbeam = "0.8"
num_cpus = "1.16"

[build-dependencies]
cbindgen = "0.27"
